--- a/public/tpl/HomeView.html
+++ b/public/tpl/HomeView.html
@@ -1,30 +1,30 @@
 ﻿<legend>Pacientes em Espera</legend>
 <div id='pE'>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pENA');">
         <div style="text-align: left">Neuro</div>
         <div id="pENA" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Adulto</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pENP');">
         <div style="text-align: left">Neuro</div>
         <div id="pENP" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Pediatria</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pEOT');">
         <div style="text-align: left">Ortopedia</div>
         <div id="pEOT" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Traumatologia</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pEUM');">
         <div style="text-align: left">Urogenicologia</div>
         <div id="pEUM" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Mastologia</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pEH');">
         <div style="text-align: left">Hidroterapia</div>
         <div id="pEH" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pESC');">
         <div style="text-align: left">Saúde Coletiva</div>
         <div id="pESC" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
@@ -33,31 +33,31 @@
 <br/>
 <legend>Pacientes Triados</legend>
 <div id='pT'>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTNA');">
         <div style="text-align: left">Neuro</div>
         <div id="pTNA" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Adulto</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTNP');">
         <div style="text-align: left">Neuro</div>
         <div id="pTNP" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Pediatria</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTOT');">
         <div style="text-align: left">Ortopedia</div>
         <div id="pTOT" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Traumatologia</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTUM');">
         <div style="text-align: left">Urogenicologia</div>
         <div id="pTUM" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Mastologia</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTH');">
         <div style="text-align: left">Hidroterapia</div>
         <div id="pTH" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTSC');">
         <div style="text-align: left">Saúde Coletiva</div>
         <div id="pTSC" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
@@ -66,33 +66,38 @@
 <br/>
 <legend>Paciente em Atendimento</legend>
 <div id='pA'>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pANA');">
         <div style="text-align: left">Neuro</div>
         <div id="pANA" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Adulto</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pANP');">
         <div style="text-align: left">Neuro</div>
         <div id="pANP" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Pediatria</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pAOT');">
         <div style="text-align: left">Ortopedia</div>
         <div id="pAOT" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Traumatologia</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pAUM');">
         <div style="text-align: left">Urogenicologia</div>
         <div id="pAUM" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Mastologia</div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pAH');">
         <div style="text-align: left">Hidroterapia</div>
         <div id="pAH" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
-    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px">
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pASC');">
         <div style="text-align: left">Saúde Coletiva</div>
         <div id="pASC" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
 </div>
 
+<script>
+    function find(por) {
+        window.location = '#patients/painel/' + por;
+    }
+</script>
