--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -1,4 +1,6 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+﻿          <a class="navbar-brand" href="#"><img class="logo" src="img/logo.png" width="65"></a>
+
+<div class="navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
