--- a/public/tpl/AboutView.html
+++ b/public/tpl/AboutView.html
@@ -1,40 +1,34 @@
 ﻿<div class="row-fluid">
     <div class="span12">
-        <img class="about-icon" src="img/download.png" width="50">
-        <h4>Download the source code</h4>
-        <p>The source code for this application is available in <a href="https://github.com/ccoenraets/nodecellar">this repository</a> on GitHub.</p>
-    </div>
-</div>
-
-<br/>
-
-<div class="row-fluid">
-    <div class="span12">
         <img class="about-icon" src="img/discuss.png" width="50" style="float: left;">
-        <h4>Comments and questions</h4>
-        <p>I love to hear your feedback. Post your questions and comments on the blog post associated with this
-            application.</p>
+        <h4>Atendimento</h4><br/><br/>
+        <p>
+<b>Telefone:</b> 4239-3334<br /> 
+<b>Horário de Atendimento:</b> SEGUNDA À SEXTA - 8h00 às 22h00<br />
+<b>Local:</b> Térreo – Campus Centro<br /> 
+<b>Horário de funcionamento:</b> segunda à sexta-feira, das 14 às 19h.<br /> 
+<b>Serviços:</b> Avaliação, tratamento e reabilitação nas áreas de ortopedia, traumatologia, reumatologia, geriatria, uroginecologia e neurologia adulto/infantil.<br /> 
+<b>Quem pode ser atendido:</b> qualquer pessoa, morador ou não de SCSul, desde que apresente na recepção da clínica um documento de identificação com foto e o pedido médico para fisioterapia.<br /> 
+        </p>
     </div>
 </div>
 
 <br/>
-
-
-<div class="row-fluid">
-    <div class="span12">
-        <img class="about-icon" src="img/twitter.png" width="50" style="float: left;">
-        <h4>Follow me on Twitter</h4>
-        <p><a href="http://twitter.com/ccoenraets">@ccoenraets</a></p>
-    </div>
-</div>
-
+<br/>
 <br/>
 
-
 <div class="row-fluid">
     <div class="span12">
-        <img class="about-icon" src="img/blog.png" width="50" style="float: left;">
-        <h4>Check out my blog</h4>
-        <p><a href="http://coenraets.org">http://coenraets.org</a></p>
+        <img class="about-icon" src="img/download.png" width="50" style="float: left;">
+        <h4>Ajuda</h4><br/><br/>
+        <p><a href="../download/manualUsuario.pdf" target="_blank">download manual do usuário</a></p>
     </div>
 </div>
+
+<footer class="footer">
+        <p class="pull-right"><a href="http://www.uscs.edu.br" target="_blank">www.uscs.edu.br</a></p>
+        <p>Universidade Municipal de São Caetano do Sul<br />
+        Campus Barcelona - Av. Goiás, 3400 - CEP: 09550-051 SCSul - SP<br />
+        Campus Centro - Rua Santo Antônio, 50 - CEP: 09521-160 SCSul - SP<br />
+        Farmácia-Escola - Rua Tibagi, 441/457 - Bairro Santa Maria - CEP: 09560-400 - SCSul - SP</p>
+    </footer>
