alterando botao pesquisar e tela about

--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -30,7 +30,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="about-menu"><a href="#about">About</a></li>
+                    <li class="about-menu"><a href="#about">Sobre</a></li>
                     <li><a href="logout">Sair</a></li>
                     <li><a><label id="loggedBy"></label></a></li>
                 </ul>
