--- a/public/tpl/ManagersView.html
+++ b/public/tpl/ManagersView.html
@@ -6,7 +6,7 @@
     <div class="input-group">
       <input type="text" id="txtPesquisa" class="form-control" maxlength="100">
       <div class="input-group-btn">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Por Nome <span class="caret"></span></button>
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Pesquisar&nbsp;&nbsp;<span class="caret"></span></button>
         <ul class="dropdown-menu pull-right">
           <li><a onclick="find('name');">Por Nome</a></li>
           <li><a onclick="find('cpf');">Por CPF</a></li>
