--- a/public/tpl/AboutView.html
+++ b/public/tpl/AboutView.html
@@ -21,7 +21,7 @@
     <div class="span12">
         <img class="about-icon" src="img/download.png" width="50" style="float: left;">
         <h4>Ajuda</h4><br/><br/>
-        <p><a href="downloads/manualUsuario" target="_blank">download manual do usuário</a></p>
+        <p><a href="downloads/manualUsuario" target="_blank">manual do usuário</a></p>
     </div>
 </div>
 
