finalizando tela About

--- a/public/tpl/AboutView.html
+++ b/public/tpl/AboutView.html
@@ -26,9 +26,9 @@
 </div>
 
 <footer class="footer">
-        <p class="pull-right"><a href="http://www.uscs.edu.br" target="_blank">www.uscs.edu.br</a></p>
-        <p>Universidade Municipal de São Caetano do Sul<br />
-        Campus Barcelona - Av. Goiás, 3400 - CEP: 09550-051 SCSul - SP<br />
-        Campus Centro - Rua Santo Antônio, 50 - CEP: 09521-160 SCSul - SP<br />
-        Farmácia-Escola - Rua Tibagi, 441/457 - Bairro Santa Maria - CEP: 09560-400 - SCSul - SP</p>
+        <p class="pull-right" style="font-size: 10px"><a href="http://www.uscs.edu.br" target="_blank">www.uscs.edu.br</a></p>
+        <p style="font-size: 10px">Universidade Municipal de São Caetano do Sul<br />
+        Campus Barcelona - Av. Goiás, 3400 - CEP: 09550-051 - São Caetano do Sul - SP<br />
+        Campus Centro - Rua Santo Antônio, 50 - CEP: 09521-160 - São Caetano do Sul - SP<br />
+        Farmácia-Escola - Rua Tibagi, 441/457 - Bairro Santa Maria - CEP: 09560-400 - São Caetano do Sul - SP</p>
     </footer>
