--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -27,6 +27,15 @@
                            <li class="managers-menu"><a href="#managers">Gestores</a></li>
                         </ul>
                     </li>
+              <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Relatórios <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li class="students-menu"><a href="rel/relpatients.html" target="_blank">Pacientes</a></li>
+                            <li class="teachers-menu"><a href="rel/relcompletepatients.html" target="_blank">Pacientes Completo</a></li>
+                           <li class="divider"></li>
+                           <li class="managers-menu"><a href="rel/relusers.html" target="_blank">Usuários</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
