--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -30,12 +30,12 @@
               <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Relatórios <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li class="students-menu"><a href="rel/relpatients.html" target="_blank">Pacientes</a></li>
-                            <li class="teachers-menu"><a href="rel/relcompletepatients.html" target="_blank">Pacientes Completo</a></li>
-                           <li class="managers-menu"><a href="rel/relusers.html" target="_blank">Usuários</a></li>
+                            <li><a href="rel/relpatients.html" target="_blank">Pacientes</a></li>
+                            <li><a href="rel/relcompletepatients.html" target="_blank">Pacientes Completo</a></li>
+                           <li><a href="rel/relusers.html" target="_blank">Usuários</a></li>
                            <li class="divider"></li>
-                            <li class="managers-menu"><a href="xmlcompletepatients" target="_blank">Exportar Pacientes</a></li>
-                            <li class="managers-menu"><a href="xmlcompleteusers" target="_blank">Exportar Usuários</a></li>
+                            <li><a href="xmlcompletepatients" target="_blank">Exportar Pacientes</a></li>
+                            <li><a href="xmlcompleteusers" target="_blank">Exportar Usuários</a></li>
                         </ul>
                     </li>
                 </ul>
