finalizando pagina sobre

--- a/public/tpl/AboutView.html
+++ b/public/tpl/AboutView.html
@@ -1,14 +1,14 @@
 ﻿<div class="row-fluid">
     <div class="span12">
-        <img class="about-icon" src="img/discuss.png" width="50" style="float: left;">
-        <h4>Atendimento</h4><br/><br/>
+        <h4>SISTEMA DE ATENDIMENTO A CLINICA DE FISIOTERAPIA DA USCS</h4><br/><br/>
         <p>
-<b>Telefone:</b> 4239-3334<br /> 
-<b>Horário de Atendimento:</b> SEGUNDA À SEXTA - 8h00 às 22h00<br />
-<b>Local:</b> Térreo – Campus Centro<br /> 
-<b>Horário de funcionamento:</b> segunda à sexta-feira, das 14 às 19h.<br /> 
-<b>Serviços:</b> Avaliação, tratamento e reabilitação nas áreas de ortopedia, traumatologia, reumatologia, geriatria, uroginecologia e neurologia adulto/infantil.<br /> 
-<b>Quem pode ser atendido:</b> qualquer pessoa, morador ou não de SCSul, desde que apresente na recepção da clínica um documento de identificação com foto e o pedido médico para fisioterapia.<br /> 
+Esta Aplicação foi desenvolvida com fins acadêmicos para que os gestores e professores<br/>
+possam acompanhar os processos realizados em forma de indicadores, além de disponibilizar<br/>
+para a Clínica uma forma mais segura e ágil de efetuar os cadastros de seus pacientes,<br/>
+atualizar e acompanhar corretamente os tratamentos realizados e a situação atual dos<br/>
+mesmos.<br /><br />
+Utilizamos para o desenvolvimento o banco de Dados MongoDB orientado à documentos<br/>
+e um ambiente Node.js (linguagem JavaScript no servidor).
         </p>
     </div>
 </div>
@@ -22,6 +22,7 @@
         <img class="about-icon" src="img/download.png" width="50" style="float: left;">
         <h4>Ajuda</h4><br/><br/>
         <p><a href="downloads/manualUsuario" target="_blank">manual do usuário</a></p>
+        <p class="pull-right">Versão 1.0.3</p>
     </div>
 </div>
 
