--- a/public/tpl/HomeView.html
+++ b/public/tpl/HomeView.html
@@ -16,7 +16,7 @@
         <div style="text-align: right">Traumatologia</div>
     </div>
     <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pEUM');">
-        <div style="text-align: left">Urogenicologia</div>
+        <div style="text-align: left">Uroginecologia</div>
         <div id="pEUM" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Mastologia</div>
     </div>
@@ -27,6 +27,10 @@
     <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pESC');">
         <div style="text-align: left">Saúde Coletiva</div>
         <div id="pESC" class="control-label" style="font-size: 30px; text-align: center"></div>
+    </div>
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pEPN');">
+        <div style="text-align: left">Pneumologia</div>
+        <div id="pEPN" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
 </div>
 <br/>
@@ -49,7 +53,7 @@
         <div style="text-align: right">Traumatologia</div>
     </div>
     <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTUM');">
-        <div style="text-align: left">Urogenicologia</div>
+        <div style="text-align: left">Uroginecologia</div>
         <div id="pTUM" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Mastologia</div>
     </div>
@@ -60,6 +64,10 @@
     <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTSC');">
         <div style="text-align: left">Saúde Coletiva</div>
         <div id="pTSC" class="control-label" style="font-size: 30px; text-align: center"></div>
+    </div>
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pTPN');">
+        <div style="text-align: left">Pneumologia</div>
+        <div id="pTPN" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
 </div>
 <br/>
@@ -82,7 +90,7 @@
         <div style="text-align: right">Traumatologia</div>
     </div>
     <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pAUM');">
-        <div style="text-align: left">Urogenicologia</div>
+        <div style="text-align: left">Uroginecologia</div>
         <div id="pAUM" class="control-label" style="font-size: 30px; text-align: center"></div>
         <div style="text-align: right">Mastologia</div>
     </div>
@@ -93,6 +101,10 @@
     <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pASC');">
         <div style="text-align: left">Saúde Coletiva</div>
         <div id="pASC" class="control-label" style="font-size: 30px; text-align: center"></div>
+    </div>
+    <div class="btn btn-primary" style="margin-right: 20px; height: 100px; width: 130px" onclick="find('pAPN');">
+        <div style="text-align: left">Pneumologia</div>
+        <div id="pAPN" class="control-label" style="font-size: 30px; text-align: center"></div>
     </div>
 </div>
 
