--- a/public/tpl/TreatmentView.html
+++ b/public/tpl/TreatmentView.html
@@ -17,9 +17,10 @@
                                 <option <%= serviceArea === 'NEURO ADULTO' ? 'selected' : '' %>>NEURO ADULTO</option>
                                 <option <%= serviceArea === 'NEURO PEDIATRIA' ? 'selected' : '' %>>NEURO PEDIATRIA</option>
                                 <option <%= serviceArea === 'ORTOPEDIA TRAUMATOLOGIA' ? 'selected' : '' %>>ORTOPEDIA TRAUMATOLOGIA</option>
-                                <option <%= serviceArea === 'UROGENICOLOGIA MASTOLOGIA' ? 'selected' : '' %>>UROGENICOLOGIA MASTOLOGIA</option>
+                                <option <%= serviceArea === 'UROGINECOLOGIA MASTOLOGIA' ? 'selected' : '' %>>UROGINECOLOGIA MASTOLOGIA</option>
                                 <option <%= serviceArea === 'HIDROTERAPIA' ? 'selected' : '' %>>HIDROTERAPIA</option>
                                 <option <%= serviceArea === 'SAUDE COLETIVA' ? 'selected' : '' %>>SAUDE COLETIVA</option>
+                                <option <%= serviceArea === 'PNEUMOLOGIA' ? 'selected' : '' %>>PNEUMOLOGIA</option>
                             </select>
                             <span class="help-inline"></span>
                         </div>
