--- a/public/signin.html
+++ b/public/signin.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clinica USCS</title>
+    <title>Clinica Fisio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <div class="container">
 
       <form class="form-signin" action="/login" method="post">
-        <h2 class="form-signin-heading">Clinica USCS</h2>
+        <h2 class="form-signin-heading">Clinica Fisio</h2>
         <input type="text" name="username" class="form-control" placeholder="Email" maxlength="100" required autofocus>
         <input type="password" name="password" class="form-control" placeholder="Senha" maxlength="20" required>
         <label class="checkbox">
