--- a/public/tpl/AboutView.html
+++ b/public/tpl/AboutView.html
@@ -1,6 +1,7 @@
 ﻿<div class="row-fluid">
     <div class="span12">
-        <h4>SISTEMA DE ATENDIMENTO A CLINICA DE FISIOTERAPIA DA USCS</h4><br/><br/>
+        <h4>SISTEMA DE ATENDIMENTO A CLINICA DE FISIOTERAPIA</h4>
+                <h4>UNIVERSIDADE SÃO CAETANO DO SUL</h4><br/>
         <p>
 Esta Aplicação foi desenvolvida com fins acadêmicos para que os gestores e professores<br/>
 possam acompanhar os processos realizados em forma de indicadores, além de disponibilizar<br/>
@@ -32,8 +33,5 @@ e um ambiente Node.js (linguagem JavaScript no servidor).
 
 <footer class="footer">
         <p class="pull-right" style="font-size: 10px"><a href="http://www.uscs.edu.br" target="_blank">www.uscs.edu.br</a></p>
-        <p style="font-size: 10px">Universidade Municipal de São Caetano do Sul<br />
-        Campus Barcelona - Av. Goiás, 3400 - CEP: 09550-051 - São Caetano do Sul - SP<br />
-        Campus Centro - Rua Santo Antônio, 50 - CEP: 09521-160 - São Caetano do Sul - SP<br />
-        Farmácia-Escola - Rua Tibagi, 441/457 - Bairro Santa Maria - CEP: 09560-400 - São Caetano do Sul - SP</p>
+        <p style="font-size: 10px">Universidade Municipal de São Caetano do Sul</p>
     </footer>
