--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -1,6 +1,4 @@
-﻿          <a class="navbar-brand" href="#"><img class="logo" src="img/logo.png" width="65"></a>
-
-<div class="navbar-inverse navbar-fixed-top" role="navigation">
+﻿<div class="navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -9,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Clinica USCS</a>
+          <a class="navbar-brand" href="#">Clinica Fisio</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
